k8s/blog/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blog-deployment
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: ghcr.io/cjcocokrisp/blog:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
