k8s/blog/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-svc
  labels:
    app: blog
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: blog
